added keyValues to allow other optional parameters (not within AssetReference)
