# commons-asset-api/src/main/java/io/rocketbase/commons/dto/asset/AssetRead.java
@@ -8,6 +8,7 @@ import lombok.EqualsAndHashCode;
 
 import javax.validation.constraints.NotNull;
 import java.beans.ConstructorProperties;
+import java.util.Map;
 
 @Data
 @EqualsAndHashCode(callSuper = true)
@@ -20,16 +21,19 @@ public class AssetRead extends AssetReference {
      */
     private String download;
 
+    private Map<String, String> keyValues;
+
     public AssetRead() {
     }
 
     @JsonCreator
-    @ConstructorProperties({"id", "systemRefId", "urlPath", "type", "context", "meta", "previews", "download"})
+    @ConstructorProperties({"id", "systemRefId", "urlPath", "type", "context", "meta", "previews", "download", "keyValues"})
     @Builder(builderMethodName = "builderRead")
-    public AssetRead(@NotNull String id, String systemRefId, String urlPath, AssetType type, String context, AssetMeta meta, AssetPreviews previews, String download) {
+    public AssetRead(@NotNull String id, String systemRefId, String urlPath, AssetType type, String context, AssetMeta meta, AssetPreviews previews, String download, Map<String, String> keyValues) {
         super(id, systemRefId, urlPath, type, context, meta);
         setPreviews(previews);
         setDownload(download);
+        setKeyValues(keyValues);
     }
 
     public String toString() {
