# commons-asset-api/src/main/java/io/rocketbase/commons/dto/asset/AssetUpdate.java
@@ -1,0 +1,26 @@
+package io.rocketbase.commons.dto.asset;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.io.Serializable;
+import java.util.Map;
+
+/**
+ * null properties mean let value as it is
+ */
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class AssetUpdate implements Serializable {
+    /**
+     * will removed key that have value of null <br>
+     * will only add/replace new/existing key values<br>
+     * not mentioned key will still stay the same
+     */
+    private Map<String, String> keyValues;
+
+}
